--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Savvy Component Library</title>
+    <meta name="author" content="vidhi thakur">
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
+
 <body>
-    <a href="./components/component_page/navbar.html">click here!</a>
+    <nav class="nav">
+        <div class="nav-LHS">
+            <h1 class="nav-brandName p-1">Savvy UI</h1>
+            <div class="nav-pages">
+                <a href="/">
+                    <span class="page active-page">Installation</span>
+                </a>
+                <a href="/">
+                    <span class="ml-05 page">Docs</span>
+                </a>
+            </div>
+        </div>
+        <div class="nav-links">
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-github nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-linkedin nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-twitter nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+        </div>
+    </nav>
 </body>
+<script src="https://kit.fontawesome.com/ba1ac74ca9.js" crossorigin="anonymous"></script>
+
 </html>
