--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Savvy Component Library</title>
 </head>
 <body>
-    <a href="./components/component_page/navbar.html">click here!</a>
+    <nav class="nav">
+        <div class="nav-LHS">
+            <h1 class="nav-brandName p-1">Savvy UI</h1>
+            <div class="nav-pages">
+                <a href="/">
+                    <span class="page active-page">Installation</span>
+                </a>
+                <a href="/">
+                    <span class="ml-05 page">Docs</span>
+                </a>
+            </div>
+        </div>
+        <div class="nav-links">
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-github nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-linkedin nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+            <span class="position-rel nav-icon-box">
+                <i class="fa fa-twitter nav-icon profile-icon" aria-hidden="true"></i>
+            </span>
+        </div>
+    </nav>
+    <main>
+        <section>
+            
+        </section>
+    </main>
 </body>
 </html>
