added basic structure to landing page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
             </span>
         </div>
     </nav>
+    <main>
+
+        <!-- about savvy UI - intent behind UI -->
+        <section class="about-section">
+            <div class="about">
+                <h2>Build clean UI with <span class="heading-highlight">Savvy</span></h2>
+            </div>
+            <aside>
+                <img src="./assets/images/" alt="">
+            </aside>
+        </section>
+
+        <!-- how to install -->
+        <section class="install-section">
+
+        </section>
+
+    </main>
 </body>
 <script src="https://kit.fontawesome.com/ba1ac74ca9.js" crossorigin="anonymous"></script>
 
