added about section in landing page

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 
         <!-- about savvy UI - intent behind UI -->
         <section class="about-section">
-            <div class="about">
-                <h2>Build clean UI with <span class="heading-highlight">Savvy</span></h2>
+            <div class="about pt-1 pl-2 m-auto">
+                <h2 class="about-heading">Build clean UI with <span class="heading-highlight">Savvy</span></h2>
+                <p class="about-content mt-1">It is a <i>simple and sophisticated</i> component library curated for minimalistic UI needs. Just copy the components and customize it according to your needs.</p>
             </div>
-            <aside>
-                <img src="./assets/images/" alt="">
+            <aside class="about-image mt-1">
+                <img height="auto" width="70%" src="./assets/images/landing_page.svg" alt="landing page image">
             </aside>
         </section>
 
