added basic structure for doc

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="/">
                     <span class="page active-page">Installation</span>
                 </a>
-                <a href="/">
+                <a href="./pages/documentation.html">
                     <span class="ml-05 page">Docs</span>
                 </a>
             </div>
@@ -61,7 +61,7 @@
             <div class="install pt-1">
                 <h2>How installation works?</h2>
                 <p class="install-content mt-1">Copy paste the code of the component you want to use and add a link
-                    tag in the head section. </p>
+                    tag in the head section.</p>
             </div>
 
             <aside class="aside-bottom">
