added `id` to all the component section

--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -38,7 +38,7 @@
 
     <main class="p-1">
         <!-- alert -->
-        <section class="component p-1">
+        <section class="component p-1" id="alert">
             <h2 class="component-heading">Alert</h2>
             <p class="about-component">Alerts are used to attract user's attention for important information without
                 interrupting the user's
@@ -82,7 +82,7 @@
         </section>
 
         <!-- avatar -->
-        <section class="component p-1">
+        <section class="component p-1" id="avatar">
             <h2 class="component-heading">Avatar</h2>
             <p class="about-component">Avatar can be used to show user's profile picture on profile information page, on
                 navigation bar, in blogs grid items.</p>
@@ -137,7 +137,7 @@
         </section>
 
         <!-- badge -->
-        <section class="component p-1">
+        <section class="component p-1" id="badge">
             <h2 class="component-heading">Badge</h2>
             <p class="about-component">Badges are being used to display a notification count or status information.</p>
 
@@ -230,7 +230,7 @@
         </section>
 
         <!-- button -->
-        <section class="component p-1">
+        <section class="component p-1" id="button">
             <h2 class="component-heading">Button</h2>
             <p class="about-component">Buttons are also called as call to action. We have range of buttons and their
                 states. You may use a tag or button element, you need to add respective classes, and you are good to go.
@@ -284,7 +284,7 @@
         </section>
 
         <!-- card -->
-        <section class="component p-1">
+        <section class="component p-1" id="card">
             <h2 class="component-heading">Card</h2>
             <p class="about-component">Card are used to show user related data collectively, like product details.</p>
 
@@ -484,7 +484,7 @@
         </section>
 
         <!-- form -->
-        <section class="component p-1">
+        <section class="component p-1" id="form">
             <h2 class="component-heading">Form</h2>
             <p class="about-component">To submit user information</p>
 
@@ -532,7 +532,7 @@
         </section>
 
         <!-- image -->
-        <section class="component p-1">
+        <section class="component p-1" id="image">
             <h2 class="component-heading">Images</h2>
             <p class="about-component">Images can be responsive to fit the parent's width, and also can be customised to
                 be round shaped.</p>
@@ -572,7 +572,7 @@
         </section>
 
         <!-- input -->
-        <section class="component p-1">
+        <section class="component p-1" id="input">
             <h2 class="component-heading">Input</h2>
             <p class="about-component">Inputs are use for user interaction.</p>
 
@@ -627,7 +627,7 @@
         </section>
 
         <!-- navbar -->
-        <section class="component p-1">
+        <section class="component p-1" id="navbar">
             <h2 class="component-heading">Navigation bar</h2>
             <p class="about-component">Navigation bar is used to navigate through the web apps or websites. This
                 navigation component is responsive. It is a hamburger menu in medium and small devices.</p>
@@ -699,7 +699,7 @@
         </section>
 
         <!-- rating -->
-        <section class="component p-1">
+        <section class="component p-1" id="rating">
             <h2 class="component-heading">Rating</h2>
             <p class="about-component">Rating components can be used as read-only badge or in reviews section. Can be
                 used in reviews section as form too.</p>
@@ -739,7 +739,7 @@
         </section>
 
         <!-- toast -->
-        <section class="component p-1">
+        <section class="component p-1" id="toast">
             <h2 class="component-heading">Toast</h2>
             <p class="about-component">This component can be used for toast or snackbar component. Toast is mostly used
                 to show feedback message. Snackbar is to used show message that need user action.</p>
