added links to navbar
profile link and page link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <nav class="nav">
         <div class="nav-LHS">
-            <h1 class="nav-brandName p-1">Savvy UI</h1>
+            <a href="/">
+                <h1 class="nav-brandName p-1">Savvy UI</h1>
+            </a>
             <div class="nav-pages">
                 <a href="/">
                     <span class="page active-page">Installation</span>
@@ -24,15 +26,21 @@
             </div>
         </div>
         <div class="nav-links">
-            <span class="position-rel nav-icon-box">
-                <i class="fa fa-github nav-icon profile-icon" aria-hidden="true"></i>
-            </span>
-            <span class="position-rel nav-icon-box">
-                <i class="fa fa-linkedin nav-icon profile-icon" aria-hidden="true"></i>
-            </span>
-            <span class="position-rel nav-icon-box">
-                <i class="fa fa-twitter nav-icon profile-icon" aria-hidden="true"></i>
-            </span>
+            <a href="https://github.com/vidhi-thakur">
+                <span class="position-rel nav-icon-box">
+                    <i class="fa fa-github nav-icon profile-icon" aria-hidden="true"></i>
+                </span>
+            </a>
+            <a href="https://www.linkedin.com/in/vidhi-thakur-9353271a8/">
+                <span class="position-rel nav-icon-box">
+                    <i class="fa fa-linkedin nav-icon profile-icon" aria-hidden="true"></i>
+                </span>
+            </a>
+            <a href="https://twitter.com/vidhithakur97">
+                <span class="position-rel nav-icon-box">
+                    <i class="fa fa-twitter nav-icon profile-icon" aria-hidden="true"></i>
+                </span>
+            </a>
         </div>
     </nav>
     <main class="savvy-info">
